--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/connection"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
@@ -80,6 +80,6 @@
         android:textColor="@color/colorGreyText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/connection" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
