Style modification on login view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorMainDark">#191414</color>
     <color name="colorGreyText">#8c8c8c</color>
+    <color name="colorWhite">#f0f0f0</color>
+    <color name="colorGold">#AC8546</color>
 </resources>
