--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,13 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorWhite</item>
+        <item name="colorControlNormal">@color/colorGold</item>
+    </style>
+
+    <style name="AppTheme.EditTextOverlay" parent = "ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">@color/colorGold</item>
+        <item name="colorControlNormal">@color/colorWhite</item>
     </style>
 
 </resources>
