--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,12 @@
         android:ems="10"
         android:hint="@string/email_text"
         android:inputType="textEmailAddress"
-        android:textColor="@color/colorGreyText"
+        android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorGreyText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        android:theme="@style/AppTheme.EditTextOverlay" />
 
     <EditText
         android:id="@+id/password_edit_text"
@@ -47,11 +48,12 @@
         android:ems="10"
         android:hint="@string/mot_de_passe"
         android:inputType="textPassword"
-        android:textColor="@color/colorGreyText"
+        android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorGreyText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
+        android:theme="@style/AppTheme.EditTextOverlay" />
 
     <Button
         android:id="@+id/connection"
