--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorMainDark"
-    tools:context=".MainActivity">
+    tools:context=".Controllers.MainActivity">
 
     <ImageView
         android:id="@+id/logo"
@@ -23,45 +23,45 @@
         android:id="@+id/email_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="32dp"
         android:drawableStart="@drawable/ic_action_email"
         android:ems="10"
         android:hint="@string/email_text"
         android:inputType="textEmailAddress"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorGreyText"
+        android:theme="@style/AppTheme.EditTextOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        android:theme="@style/AppTheme.EditTextOverlay" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
         android:id="@+id/password_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="32dp"
         android:drawableStart="@drawable/ic_action_password"
         android:ems="10"
         android:hint="@string/mot_de_passe"
         android:inputType="textPassword"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorGreyText"
+        android:theme="@style/AppTheme.EditTextOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
-        android:theme="@style/AppTheme.EditTextOverlay" />
+        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />
 
     <Button
         android:id="@+id/connection"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:shadowColor="@color/colorGreyText"
         android:text="@string/connexion"
