Add some controls

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorGreyText">#8c8c8c</color>
     <color name="colorWhite">#f0f0f0</color>
     <color name="colorGold">#CF994C</color>
+    <color name="colorBlackRed">#8B0000</color>
 </resources>
