--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="32dp"
         android:drawableStart="@drawable/ic_action_email"
+        android:drawablePadding="@dimen/drawable_padding"
         android:ems="10"
         android:hint="@string/email_text"
         android:inputType="textEmailAddress"
@@ -45,6 +46,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:drawableStart="@drawable/ic_action_password"
+        android:drawablePadding="@dimen/drawable_padding"
         android:ems="10"
         android:hint="@string/mot_de_passe"
         android:inputType="textPassword"
