--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -26,6 +26,8 @@
             android:inputType="textPersonName"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGreyText"
+            android:drawableStart="@drawable/ic_action_firstname_lastname"
+            android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,6 +44,8 @@
             android:inputType="textPersonName"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGreyText"
+            android:drawableStart="@drawable/ic_action_firstname_lastname"
+            android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/firstname" />
@@ -58,6 +62,8 @@
             android:inputType="textEmailAddress"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGreyText"
+            android:drawableStart="@drawable/ic_action_email"
+            android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lastname" />
@@ -74,6 +80,8 @@
             android:inputType="textPassword"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGreyText"
+            android:drawableStart="@drawable/ic_action_password"
+            android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email" />
@@ -90,6 +98,8 @@
             android:inputType="textPassword"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGreyText"
+            android:drawableStart="@drawable/ic_action_password"
+            android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password" />
