--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button_theme_light_black"
+        android:backgroundTint="@color/colorLightBlack"
         android:textColor="@color/colorWhite"
         android:text="@string/connexion"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textSize="10sp"
-        android:background="@android:color/transparent"
+        android:backgroundTint="@android:color/transparent"
         android:text="@string/register"
         android:textColor="@color/colorGreyText"
         app:layout_constraintEnd_toEndOf="parent"
