--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -111,7 +111,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/button_theme_black"
+            android:backgroundTint="@color/colorLightBlack"
             android:textColor="@color/colorWhite"
             android:text="@string/validate"
             app:layout_constraintEnd_toEndOf="parent"
