--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -15,40 +15,22 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/firstname"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:drawableStart="@drawable/ic_action_firstname_lastname"
+            android:drawablePadding="@dimen/drawable_padding"
             android:ems="10"
-            android:hint="@string/firstname"
+            android:hint="@string/username"
             android:inputType="textPersonName"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGreyText"
-            android:drawableStart="@drawable/ic_action_firstname_lastname"
-            android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/lastname"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:hint="@string/Lastname"
-            android:inputType="textPersonName"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorGreyText"
-            android:drawableStart="@drawable/ic_action_firstname_lastname"
-            android:drawablePadding="@dimen/drawable_padding"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/firstname" />
 
         <EditText
             android:id="@+id/email"
@@ -66,7 +48,7 @@
             android:drawablePadding="@dimen/drawable_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lastname" />
+            app:layout_constraintTop_toBottomOf="@+id/username" />
 
         <EditText
             android:id="@+id/password"
@@ -117,6 +99,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_verification" />
+
+        <ProgressBar
+            android:id="@+id/loading_progress_register"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="74dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
