--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorMainDark"
     android:id="@+id/splash_screen"
-    tools:context=".Controllers.SplashScreen">
+    tools:context=".Controllers.Connection.SplashScreen">
 
     <ImageView
         android:id="@+id/imageView"
