--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,10 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorMainDark</item>
         <item name="colorAccent">@color/colorWhite</item>
         <item name="colorControlNormal">@color/colorGold</item>
+        <item name="android:navigationBarColor">@color/colorLightBlack</item>
     </style>
 
     <style name="AppTheme.EditTextOverlay" parent="ThemeOverlay.AppCompat.Light">
