--- a/app/src/main/res/layout/fragment_user_fragment.xml
+++ b/app/src/main/res/layout/fragment_user_fragment.xml
@@ -6,19 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.Tabs.Fragments.UserFragment">
 
+    <ImageView
+        android:id="@+id/user_pic"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/addUserPicView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/colorLightBlack"
         android:text="@string/user_pic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/user_pic" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/reset-password"
