--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorMainDark"
+    android:background="@color/colorLightBlack"
     tools:context=".Controllers.Connection.LoginActivity">
 
     <ImageView
@@ -63,7 +63,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/colorLightBlack"
+        android:backgroundTint="@color/colorMainDark"
         android:textColor="@color/colorWhite"
         android:text="@string/connexion"
         app:layout_constraintBottom_toBottomOf="parent"
