--- a/app/src/main/res/layout/activity_user_picture.xml
+++ b/app/src/main/res/layout/activity_user_picture.xml
@@ -17,12 +17,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:textSize="20sp"
             android:text="@string/user_pic"
             android:textColor="@color/colorWhite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:textSize="20sp" />
+            />
 
         <Button
             android:id="@+id/addUserPicButton"
