--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -84,6 +84,7 @@
             android:gravity="start|top"
             android:hint="@string/event_description"
             android:inputType="textMultiLine"
+            android:maxLength="255"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorWhite"
             app:layout_constraintEnd_toEndOf="parent"
